# RTOS_STM32L412RBT6

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Doxyfile  RTOS_STM32L412RB.code-workspace  RTOS_STM32L412RB.ioc  RTOS_STM32L412RB.launch  STM32L412RBTX_FLASH.ld  STM32L412XX_FLASH.ld  startup_stm32l412xx.s
.devcontainer/: devcontainer.json
Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h
Core/Src/: main.c  stm32l4xx_hal_msp.c
Debug/: RTOS_STM32L412RB.elf  RTOS_STM32L412RB.list  RTOS_STM32L412RB.map  makefile  objects.list  sources.mk
Debug/Core/Src/: freertos.d  main copy.cyclo  main copy.d  main copy.su  main.cyclo  main.d  main.su  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_hal_timebase_tim.d  stm32l4xx_it.cyclo  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  system_stm32l4xx.d  test_protocol.d
Debug/Core/Src/TTA_Protocol/Common/: subdir.mk
Debug/Core/Src/TTA_Protocol/Master/: master_scheduler.d  subdir.mk
Debug/Core/Src/TTA_Protocol/Slave/: slave_fsm.d  slave_gpio_logic.d  slave_scheduler.d  subdir.mk
Debug/Core/Src/TTA_Protocol/Tasks/Master/: subdir.mk  task_master_button.d  task_master_protocol.d  task_master_rx.d  task_master_tx.d
Debug/Core/Src/TTA_Protocol/Tasks/Slave/: subdir.mk  task_slave_cmdexec.d  task_slave_gpio.d  task_slave_rx.d  task_slave_tx.d
Debug/Core/Startup/: startup_stm32l412rbtx.d  subdir.mk
Debug/Drivers/CMSIS/RTOS2/Template/: cmsis_os1.d  subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_i2c.d  stm32l4xx_hal_i2c_ex.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  stm32l4xx_hal_tim.d  stm32l4xx_hal_tim_ex.d  stm32l4xx_hal_uart.d  stm32l4xx_hal_uart_ex.d  subdir.mk
Debug/TTA_Protocol/Common/: proto_crc.d  proto_frame.cyclo  proto_frame.d  proto_frame.su  proto_parser.d  subdir.mk
Debug/TTA_Protocol/Master/: master_database.cyclo  master_database.d  master_database.su  master_fsm.cyclo  master_fsm.d  master_fsm.su  master_scheduler.cyclo  master_scheduler.d  master_scheduler.su  master_task.cyclo  master_task.d  master_task.su  subdir.mk
Debug/TTA_Protocol/Slave/: slave_fsm.d  slave_gpio_logic.d  slave_scheduler.d  subdir.mk
Debug/TTA_Protocol/Tasks/Master/: subdir.mk  task_master_button.d  task_master_protocol.d  task_master_rx.d  task_master_tx.d
Debug/TTA_Protocol/Tasks/Slave/: subdir.mk  task_slave_cmdexec.d  task_slave_gpio.d  task_slave_rx.d  task_slave_tx.d
TTA_Protocol/: PROTOCOL_INSTRUCTIONS.md  README.md
TTA_Protocol/Common/: proto_defs.h  proto_frame.c  proto_frame.h
TTA_Protocol/Master/: master_database.c  master_database.h  master_fsm.c  master_fsm.h  master_scheduler.c  master_scheduler.h  master_task.c  master_task.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
